sass/footer.scss
@use 'variables';

footer {
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-column: 1 / -1;
    margin:0  1rem;
    > div {
        grid-column: span 6;
        border-top: 1px solid variables.$primary;
        border-bottom: 1px solid variables.$primary;
        &:last-of-type {
            border-left: 1px solid variables.$primary;
        }
    }
}

#secondary_menu {
    text-align: center;
    padding: 0;
    margin: 2rem 0;
    li {
        margin-bottom: 1rem;
        &:last-child {
            margin-bottom: 0;
        }
        a {
            font-weight: bold;
            color: variables.$primary;
        }
    }
}

#contact_menu {
    text-align: center;
    padding: 0;
    margin: 2rem 0;
    li {
        margin-bottom: 1rem;
        &:last-child {
            margin-bottom: 0;
        }
        a {
            color: variables.$primary;
        }
    }
}

#footer-title {
    grid-column: 1 / -1;
    text-align: center;
    margin-bottom: 2rem;
}

#newsletter {
    grid-column: 1 / -1;
    margin: 0;
    padding: 2rem 0;
    text-align: center;
}

#signoff {
    color: variables.$tertiary;
}

@media screen and (min-width:992px){
    #contact_menu,#secondary_menu {
        li {
            margin-bottom: 0;
            margin-left: .5rem;
            display: inline-block;
        }
    }
    #footer-title {
        text-align: left;
    }
}

